# cv

./: .gitignore  .stylish-haskell.yaml  GitHubPages.hs  Main.hs  Makefile  build  cv.cabal  cv.en.html  cv.hs  cv.ru.html  fourmolu.yaml  index.html  mycv  mycv.cabal  mycv.en.html  mycv.hs  mycv.ru.html  package.yaml  stack.yaml
Data/: CV.hs
Data/CV/: Render.hs  Types.hs
Data/Tuple/: X.hs
System/Directory/: X.hs
lib/: CV.hs  GitHubPages.hs
lib/CV/: Render.hs  Types.hs
lib/Data/Tuple/: X.hs
