name:           cv
version:        2015
build-type:     Simple
cabal-version:  >= 1.10

executable cv
    build-depends:    base
                    , blaze-html
                    , bytestring
                    , directory
                    , filepath
                    , process
                    , shakespeare
                    , temporary
    default-language: Haskell2010
    main-is:          cv.hs
    ghc-options:      -Wall -Werror
    other-modules:    Data.CV
                      Data.CV.Render
                      Data.CV.Types
                      Data.Tuple.X
                      GitHubPages
                      System.Directory.X
