cabal-version: 3.4
name:          cv
version:       2025

common language
  build-depends:
    , base
    , blaze-html
    , bytestring
    , directory
    , text

  default-extensions:
    NoFieldSelectors
    StrictData

  default-language:   GHC2024
  ghc-options:        -Wall -Werror

library
  import:          language
  exposed-modules:
    CV
    CV.Render
    CV.Types
    Data.Tuple.X
    GitHubPages

  hs-source-dirs:  lib
  build-depends:
    , process
    , shakespeare
    , temporary

executable cv
  import:             language
  default-extensions:
    BlockArguments
    DisambiguateRecordFields
    ImportQualifiedPost
    OverloadedStrings

  main-is:            Main.hs
  ghc-options:        -Wall -Werror
  build-depends:
    , cv
    , filepath
