name:           mycv
version:        2015
build-type:     Simple
cabal-version:  >= 1.10

executable mycv
    build-depends:    base
                    , blaze-html
                    , bytestring
                    , filepath
                    , shakespeare
    default-language: Haskell2010
    main-is:          mycv.hs
    ghc-options:      -Wall -Werror
    other-modules:    Data.CV
                      Data.CV.Render
                      Data.CV.Types
